--- a/view/community/questionDetail.html
+++ b/view/community/questionDetail.html
@@ -293,7 +293,58 @@
                 
             </div><!-- question-detail-body 끝 -->
 
-            <div class="question-detail-footer">
+            <section class="qna-detail-comment-section">
+                <section class="comment-feed">
+                    <h1 class="comment-feed-header">댓글<!-- --> <span class="comment-feed-header-count">6</span></h1>
+                    <form class="comment-feed-form">
+                        <div class="comment-feed-form-user">
+                            <img src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images1527758173_fAU.jpeg?gif=1&amp;w=36" srcSet="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images1527758173_fAU.jpeg?gif=1&amp;w=72 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images1527758173_fAU.jpeg?gif=1&amp;w=72 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images1527758173_fAU.jpeg?gif=1&amp;w=144 3x" />
+                        </div>
+                        <div class="comment-feed-form-input">
+                            <div class="comment-feed-form-content">
+                                <div class="comment-content-input">
+                                    <div class="comment-content-input-text comment-feed-form-content-text" data-ph="댓글을 남겨 보세요." contenteditable="true" style="outline: none;"></div>
+                                </div>
+                                <div class="photo-input-wrap comment-feed-form-content-photo">
+                                    <ul class="photo-input"></ul>
+                                </div>
+                            </div>
+                            <div class="comment-feed-form-actions">
+                                <button class="comment-feed-form-photo" aria-label="사진 업로드" type="button">
+                                    <svg width="24" height="20" viewBox="0 0 24 20" preserveAspectRatio="xMidYMid meet">
+                                        <path fill="#292929" fill-rule="nonzero" d="M3.22 20C1.446 20 0 18.547 0 16.765V6.176c0-1.782 1.446-3.235 3.22-3.235h3.118L7.363.377A.586.586 0 0 1 7.903 0h8.195c.24.003.453.152.54.377l1.024 2.564h3.118c1.774 0 3.22 1.453 3.22 3.235v10.589C24 18.547 22.554 20 20.78 20H3.22zm0-1.176h17.56a2.037 2.037 0 0 0 2.05-2.06V6.177c0-1.15-.904-2.058-2.05-2.058h-3.512a.585.585 0 0 1-.54-.368l-1.024-2.574H8.296L7.27 3.75a.585.585 0 0 1-.54.368H3.22a2.037 2.037 0 0 0-2.05 2.058v10.589c0 1.15.904 2.059 2.05 2.059zM12 17.059c-3.064 0-5.561-2.51-5.561-5.588 0-3.08 2.497-5.589 5.561-5.589s5.561 2.51 5.561 5.589c0 3.079-2.497 5.588-5.561 5.588zm0-1.177a4.392 4.392 0 0 0 4.39-4.411A4.392 4.392 0 0 0 12 7.059a4.392 4.392 0 0 0-4.39 4.412A4.392 4.392 0 0 0 12 15.882z"></path>
+                                    </svg>
+                                </button>
+                                <button class="comment-feed-form-submit" aria-label="등록" type="submit">등록</button>
+                            </div>
+                        </div>
+                    </form>
+                    <ul class="comment-feed-list"></ul>
+                    <ul class="list-paginator">
+                        <li>
+                            <button class="list-paginator-page sm selected" type="button">1</button>
+                        </li>
+                        <li>
+                            <button class="list-paginator-page sm" type="button">2</button>
+                        </li>
+                        <li>
+                            <button class="list-paginator-next" type="button">
+                                <svg width="26" height="26" viewBox="0 0 26 26" preserveAspectRatio="xMidYMid meet">
+                                    <g fill="none" fill-rule="evenodd" transform="matrix(-1 0 0 1 26 0)">
+                                        <rect width="25" height="25" x=".5" y=".5" stroke="#DCDCDC" rx="4"></rect>
+                                        <g stroke="#424242" stroke-linecap="square" stroke-width="2">
+                                            <path d="M14.75 8.263L10.25 13M10.25 13l4.5 4.737"></path>
+                                        </g>
+                                    </g>
+                                </svg>
+                            </button>
+                        </li>
+                    </ul>
+                </section>
+            </section>
+
+
+            <!-- <div class="question-detail-footer">
                 <div class="question-detail-comment-section">
                     <div class="comment-feed">
                         <h3 style="display: inline;" class="comment-feed-header">댓글</h3>&nbsp;&nbsp;&nbsp;<h3 style="display: inline; color: coral; font-weight: 600;">6</h3>
@@ -302,7 +353,7 @@
                             <form class="questions-reply" style="margin-top: 15px; height: 40px; vertical-align: middle;">
                                 <div class="questions-reply-writer-image" style="float: left;">
                                     <img src="../image/ddda.gif" style="width: 50px; height: 50px; border-radius: 70%; "
-                                    onerror="this.src='.../image/avatar.png'"><!-- 프로필사진, 에러시 프로필사진-->
+                                    onerror="this.src='.../image/avatar.png'">
                                 </div>
                                 <div style="margin: 0 auto; vertical-align: middle;">
                                     <input type="text" size="50 15" style="margin-top: 8px; margin-left: 15px ;margin-bottom: 15px;font-size: 20px; width: 80%; font-weight: 600;">
@@ -333,13 +384,13 @@
                         </ul>   
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
-    <div class="col-xl-2">
+    <div class="col-xl-2" style="border-left: 1px solid #ededed;">
         
-            <div class="question-detail-sidebar" >
+            <div class="question-detail-sidebar" style="padding-left: 50px;">
                 <div class="sidebar-header">
                     <div class="sidebar-header-writer">
                         <div class="row">
@@ -347,8 +398,8 @@
                                 <img src="../image/ddda.gif" style="width: 50px; height: 50px; border-radius: 70%"
                                 onerror="this.src='.../image/avatar.png'"><!-- 프로필사진, 에러시 프로필사진-->
                             </div>
-                            <div class="questions-writer-nickname" style="color: coral; font-size: 15px; margin-left: 15px; ">현성이배통통
-                                <div class="questions-writer-profile" style="color: black; font-size: 12px; ">장현성입니다</div>
+                            <div class="questions-writer-nickname" style="color: coral; font-size: 20px; margin-left: 15px; ">현성이배통통
+                                <div class="questions-writer-profile" style="color: black; font-size: 16px; ">장현성입니다</div>
                             </div>
                             
                         </div>
