--- a/view/commons/header.html
+++ b/view/commons/header.html
@@ -124,7 +124,12 @@
         display: none;
         padding: 5px;
     }
-
+    /* 반응형 네비바 밑줄 */
+    @media (min-width: 767.98px) {
+        #nv .container-fluid{
+            border-bottom: 2px solid rgb(150,150,150);
+        }
+    }
     </style>
 </head>
 
