--- a/view/commons/menuComm.html
+++ b/view/commons/menuComm.html
@@ -1,20 +1,41 @@
-<nav class="navbar navbar-light navbar-expand-md">
-    <div class="container-fluid justify-content-center"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span
-                class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse justify-content-center" id="navcol-2"
-            style="border-bottom: 2px solid rgb(150,150,150);font-size: 13px;font-family: 'Noto Sans KR', sans-serif;">
-            <ul class="navbar-nav" style="font-family: 'Noto Sans KR', sans-serif;font-size: 20px;color: rgb(0,0,0);margin-left: -200px;">
-                <li class="nav-item"><a class="nav-link" href="../../index.html"
-                        style="color: rgb(0,0,0);font-size: 19px;margin-right: 20px;margin-left: 0;">홈</a></li>
-                <li class="nav-item"><a class="nav-link" href="#"
-                        style="color: rgb(0,0,0);font-size: 19px;margin-right: 20px;">인기글</a></li>
-                <li class="nav-item"><a class="nav-link" href="../community/story.html" 
-                        style="color: rgb(0,0,0);margin-right: 21px;">스토리</a></li>
-                <li class="nav-item"><a class="nav-link" href="../community/questions.html"
-                        style="color: rgb(0,0,0);font-size: 19px;margin-right: 20px;">질문과답변</a></li>
-                <li class="nav-item"><a class="nav-link" href="../community/event.html"
-                        style="color: rgb(0,0,0);font-size: 19px;margin-right: 190px;">이벤트</a></li>
-            </ul>
+<style>
+/* 반응형 네비바 밑줄 */
+@media (min-width: 767.98px) {
+    .navbar-expand-md>.container-fluid{
+      border-bottom: 2px solid rgb(150,150,150);
+    }
+}
+#nv .nav_a{
+        min-width: 80px;
+        color: rgb(0,0,0);
+        font-size: 19px;
+        margin-right: 20px;
+        margin-left: 0;
+}
+#nv .navbar-nav li:first-of-type a{
+        min-width: 30px;
+}
+</style>
+<nav id="nv" class="navbar navbar-light navbar-expand-md">
+    <div class="container-fluid" style="padding-bottom: 5px;">
+        <div class="container">
+
+                <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2">
+                        <span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navcol-2" style="font-size: 13px;font-family: 'Noto Sans KR', sans-serif;">
+                        <ul class="navbar-nav" style="font-family: 'Noto Sans KR', sans-serif;font-size: 20px;color: rgb(0,0,0); margin-left: 20px;">
+                                <li class="nav-item"><a class="nav-link nav_a" href="../../index.html">홈</a></li>
+                                <li class="nav-item"><a class="nav-link nav_a" href="#">인기글</a></li>
+                                <li class="nav-item"><a class="nav-link nav_a" href="../community/story.html" >스토리</a></li>
+                                <li class="nav-item"><a class="nav-link nav_a" href="../community/questions.html">질문과답변</a></li>
+                                <li class="nav-item"><a class="nav-link nav_a" href="../community/event.html">이벤트</a></li>
+                                <li class="nav-item"><a class="nav-link nav_a" href="../store/order.html">임시 주문페이지</a></li>
+                                <li class="nav-item"><a class="nav-link nav_a" href="../myPage/mainMyPage.html">임시 마이페이지</a></li>
+                        </ul>
+                </div>
+
         </div>
     </div>
 </nav>
