--- a/view/community/story.html
+++ b/view/community/story.html
@@ -14,8 +14,7 @@
 
     /* 스토리 sort 메뉴 */
     .pop_wrap{
-        margin: 0 3em 0 0;
-        padding: 0;
+        margin: 0;
         height: 50px;
     }
     .btn_pop{   /* 제목 버튼 */
@@ -33,25 +32,23 @@
     }
     .pop_box{
         position: relative;
-        height: 300px;
     }
     .btn_pop:hover+.pop_box .pop_content,.pop_content:hover{     /* 마우스 이벤트 */
         opacity: 1;
+        height: auto;
         top: 20px;
-        transition: opacity .5s, top .3s;
+        transition: opacity .3s, height .3s, top .3s;
     }
     .pop_content{   /* 내용박스 */
         position: relative;
         border-radius: 4px;
         box-shadow: 0 -1px 16px rgb(0 0 0 / 20%);
         background-color: white;
-        top: -1000px;
-        width: 120%;
-        height: auto;
+        top: 0;
+        height: 0;
         z-index: 9;
         opacity: 0;
-        transition: opacity .4s, top 2s;
-        transition-delay: .3s;
+        transition: opacity .1s, height .2s, top .2s;
     }
     .pop_content::before{   /* 박스 위 꼬다리 */
         content: "";
@@ -99,10 +96,11 @@
     </style>
 </head>
 <body>
-    <!-- <header include-html="../commons/header.html"></header>
-    <nav include-html="../commons/menuComm.html"></nav> -->
+    <header include-html="../commons/header.html"></header>
+    <nav include-html="../commons/menuComm.html"></nav>
 
-    <div class="container" style="border: solid; height: 120px;">
+    <div class="container mt-5">
+        <h1 style="font-size: 30px;margin-bottom: 15px;"><strong>스토리</strong></h1>
 
         <div id="type_menu">
             <div class="row m-5">
@@ -118,7 +116,9 @@
                             </ul>
                         </div>
                     </div>
+
                 </div>
+
                 <div class="col-md-2 pop_wrap">
                     <button type="button" class="btn_pop">주거형태 <i class="fas fa-sort"></i></button>
                     
@@ -183,8 +183,7 @@
     </div>
 
     <div class="container" style="width: 1200px;">
-        <h1 style="font-size: 30px;margin-bottom: 15px;"><strong>스토리</strong></h1>
-        <div style="margin-top: 50px;">
+        <div style="margin-top: 30px;">
             <div id="hotCardList" class="row">
 
                 <!-- 인기 인테리어 리스트 생성되는 곳 -->
@@ -199,7 +198,7 @@
 
 
 
-    <!-- <footer include-html="../commons/footer.html"></footer> -->
+    <footer include-html="../commons/footer.html"></footer>
 
 </body>
 
