css 다 뽑아서 올렸다요~

--- a/view/community/questions.html
+++ b/view/community/questions.html
@@ -320,8 +320,8 @@
 
               <!-- 테스트글3 -->
             
-              <div class="questions-item" style="color: black; width: 800px; margin: auto;padding-top: 20px;padding-bottom: 20px;">
-                <a class="questions-item-link" href="questionDetail.html" style="" >
+              <div class="questions-item" >
+                <a class="questions-item-link" href="questionDetail.html" >
                   <div class="questions-block">
   
                   <div class="questions-head-img" style="float: right; ">
